--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <div id="container-01" class="mol-container"></div>
     <img id="preview" />
+    <p id="progress"></p>
     <script>
         let element = document.querySelector('#container-01');
         // const canvas = document.getElementById("canvas");
@@ -25,42 +26,49 @@
         let viewer = $3Dmol.createViewer(element, config);
         let v = viewer;
         // all fetch is done by GPT
+
         async function go() {
             fetch('http://127.0.0.1:8000/all_images')
                 .then(response => response.json())
                 .then(data => {
                     // Assuming the data received is an array of image URLs
                     const imageList = data;
-
-                    imageList.forEach(async function(filename) {
+                    let done = 0;
+                    let all = imageList.length;
+                    imageList.forEach(async function (filename) {
                         const imageUrl = `http://127.0.0.1:8000/get_SDF?filename=${filename}`;
-
+                        done+=1;
+                        document.getElementById("progress").innerText=done + "/" + String(all)
                         // Fetch the individual image
                         await fetch(imageUrl)
                             .then(response => response.json())
-                            .then(async function(data) {
+                            .then(async function (data) {
                                 if (data) {
                                     // Image was successfully fetched
                                     for (let i = -20; i <= 20; i += 5) {
                                         v.clear()
                                         console.log(data)
                                         v.addModel(data, "sdf");                       /* load data */
-                                        v.setStyle({ "stick": { "radius": 0.15, "color": "gray" }, "sphere": { "scale": 0.2, "colorfunc":(atom)=>{
-                                            console.log(atom);
-                                            // return "#000000"
-                                            // https://en.wikipedia.org/wiki/CPK_coloring
-                                            let color = {
-                                                "C":"#505050",
-                                                "H":"#FEFEFE",
-                                                "N" :"#87CEEB",
-                                                "O" : "#FE0000",
-                                                "Cl" : "#00FE00",
-                                                "Br" : "darkred",
-                                                "I" : "darkpurple",
-                                                "S" : "yellow"
-                                            }[atom.elem];
-                                            return color ? color : "pink";
-                                        }} })  /* style all atoms */
+                                        v.setStyle({
+                                            "stick": { "radius": 0.15, "color": "gray" }, "sphere": {
+                                                "scale": 0.2, "colorfunc": (atom) => {
+                                                    console.log(atom);
+                                                    // return "#000000"
+                                                    // https://en.wikipedia.org/wiki/CPK_coloring
+                                                    let color = {
+                                                        "C": "#505050",
+                                                        "H": "#FEFEFE",
+                                                        "N": "#87CEEB",
+                                                        "O": "#FE0000",
+                                                        "Cl": "#00FE00",
+                                                        "Br": "darkred",
+                                                        "I": "darkpurple",
+                                                        "S": "yellow"
+                                                    }[atom.elem];
+                                                    return color ? color : "pink";
+                                                }
+                                            }
+                                        })  /* style all atoms */
                                         // v.setStyle(); //finally works, how? idk docs and gpt
                                         // v.setStyle({'prop': 'C', map:"greenCarbon"});
                                         // viewer.rotate(i, {
@@ -70,11 +78,11 @@
                                         // });
                                         // v.rotate(5000, "y") //GPT says 5000 is the time but it is the angle, but idk why this will make it facing us 
                                         viewer.rotate(i, "z")
-                                        viewer.rotate(i*0.25, "x")
-                                        viewer.rotate(i*0.25, "y")
-                                            // x: Math.random(),
-                                            // y: Math.random(),
-                                            // z: Math.random()
+                                        viewer.rotate(i * 0.25, "x")
+                                        viewer.rotate(i * 0.25, "y")
+                                        // x: Math.random(),
+                                        // y: Math.random(),
+                                        // z: Math.random()
                                         // });
                                         v.zoomTo();
                                         v.zoom(1 - Math.random() * 0.3)                                      /* set camera */
